# ChessPlusPlus

./: CMakeLists.txt  README.md  chessboard.cpp  matchCC.txt  matchPC.txt  piece.h  player.h  problems.txt  prova.cpp  prova.txt  readme.txt  replay.cpp  risultato.txt  scacchiera.cpp  test.txt  tester.cpp
include/: chessboard.h  path.h  piece.h  pieces.h  player.h
lib/: Board.h  Player.h  chessboard.h  detail.h  exceptions.h  include.cpp  include.h  path.h  piece.h  set.h
lib/chessboard/: chessboard.cpp  chessboard.h  oldchessboard.cpp  tester.cpp
lib/path/: path.cpp  path.h  tester.cpp
lib/piece/: piece.cpp  piece.h  test.cpp
lib/piece/pieces/: bishop.cpp  empty_tile.cpp  horse.cpp  king.cpp  knight.cpp  pawn.cpp  pedestrian.cpp  queen.cpp  rook.cpp  tower.cpp
lib/player/: bot.cpp  human.cpp  player.h
matches/: Ana_vs_BOT_CC(1).txt  Ana_vs_Gar_CC(1).txt  Ana_vs_Gar_CC(2).txt  Ana_vs_Mag_CC(1).txt  Ana_vs_Mic_CC(1).txt  Ana_vs_Mic_CC(2).txt  BOT_vs_Gar_CC(1).txt  BOT_vs_Mag_CC(1).txt  BOT_vs_Mic_CC(1).txt  Gar_vs_Ana_CC(1).txt  Gar_vs_BOT_CC(1).txt  Gar_vs_Mag_CC(1).txt  Gar_vs_Mag_CC(2).txt  Gar_vs_Mat_PC(1).txt  Gar_vs_Mic_CC(1).txt  Gar_vs_Mic_CC(2).txt  Mag_vs_Ana_CC(1).txt  Mag_vs_BOT_CC(1).txt  Mag_vs_BOT_CC(2).txt  Mag_vs_Gar_CC(1).txt  Mag_vs_Mic_CC(1).txt  Mic_vs_Ana_CC(1).txt  Mic_vs_Ana_CC(2).txt  Mic_vs_BOT_CC(1).txt  Mic_vs_Gar_CC(1).txt  Mic_vs_Gar_CC(2).txt  Mic_vs_Mag_CC(1).txt  Mic_vs_Ric_PC(1).txt
other/: README.md  problems.txt  test.txt  testbot
pieces/: king.cpp  pedestrian.cpp  tower.cpp
src/: chessboard.cpp  path.cpp  piece.cpp  pieces.cpp  player.cpp
test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
